<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <TextView
        style="@style/bold_headline_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:textAllCaps="true"
        android:text="@string/are_you_sure"
        android:textColor="@color/black" />


    <TextView
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/loose_progress"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sure_button"
        style="@style/button_outline"
        android:text="@string/yes_leave" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button"
        style="@style/button_outline"
        android:layout_marginTop="12dp"
        android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>